# open-codespeak

./: .gitignore  CLA.md  README.md  cache_dump.py  check_points.py  codespeak  colors.py  data_serializer.py  dev  ensure_server_starts.py  entity_extractor.py  entity_extractor_unified.py  env.template  execute_layouts.py  execute_work.py  extract_entities.py  extract_facts.py  extract_layouts.py  extract_project_name.py  file_based_cache.py  fileutils.py  generate_data_model_tests.py  generate_django_project.py  generate_integration_tests.py  generate_models.py  git_helper.py  highlight.py  implementation_agent.py  incremental_mode.py  lint_and_fix_phase.py  llm_cache.py  main.py  makemigrations.py  migrate.py  phase_manager.py  plan_layouts.py  plan_screens.py  plan_work.py  pyproject.toml  reconcile_data_model_tests.py  (+9 more)
.githooks/: pre-commit
app_template/: .gitignore
llm_cache/: anthropic_cached.py  cache_cli.py  cache_utils.py  clean_cache.py
log_viewer/: README.md  htmlGenerator.js  logParser.js  package-lock.json  package.json  server.js  style.css
prompts/: _shared_test_requirements.j2  extract_entities.j2  extract_facts.j2  extract_layouts.j2  generate_data_model_tests.j2  generate_data_model_tests_incremental.j2  generate_models_incremental.j2  plan_screens.j2  plan_work.j2
scripts/: clean_whitespace.py  setup-hooks.sh
spec-examples/: lumama.spec.md
spec_examples/: founder-hub.spec.md  helloworld.spec.md  lumama.spec.md  lumama.test-plan.md  preemptive-multitasking.spec.md  webapp.test-plan.md
utils/: flamegraph.py  logging_util.py
(+6 files in other folders)
